second attempt at building for older macs
refs: https://github.com/wez/wezterm/issues/128

--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -27,6 +27,10 @@ jobs:
         toolchain: ${{ matrix.rust_toolchain }}
         override: true
         components: rustfmt
+    - name: Set macOS deployment target
+      if: contains(matrix.os, 'macos')
+      run: |
+        echo "::set-env name=MACOSX_DEPLOYMENT_TARGET=10.9"
     - name: Show versions
       run: |
         rustc -V
