macos: Workaround missing stack checking symbols
Maybe this will be sufficient; these env vars should get picked
up by the `cc` crate.  Fingers crossed!

refs: https://github.com/wez/wezterm/issues/128
refs: https://github.com/sharkdp/bat/issues/680

--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -31,6 +31,8 @@ jobs:
       if: contains(matrix.os, 'macos')
       run: |
         echo "::set-env name=MACOSX_DEPLOYMENT_TARGET=10.9"
+        echo "::set-env name=CFLAGS=-fno-stack-check"
+        echo "::set-env name=CXXFLAGS=-fno-stack-check"
     - name: Show versions
       run: |
         rustc -V
